--- a/SWAGLibrary/Base.lproj/Main.storyboard
+++ b/SWAGLibrary/Base.lproj/Main.storyboard
@@ -32,7 +32,7 @@
                                         <rect key="frame" x="0.0" y="28" width="375" height="75"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="l3O-j6-OyE" id="U1G-ir-Kdh">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="74"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="74.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Slouching Towards Bethlehem" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1Bg-GI-EMJ">
@@ -101,12 +101,19 @@
                                 <color key="backgroundColor" red="0.60000002379999995" green="0.60000002379999995" blue="0.60000002379999995" alpha="1" colorSpace="calibratedRGB"/>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AGj-fl-2R0">
-                                <rect key="frame" x="239" y="88" width="48" height="30"/>
+                                <rect key="frame" x="291" y="87" width="48" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Search"/>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Swipe to delete or edit your book" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qEf-BG-F5g">
+                                <rect key="frame" x="48" y="143" width="278" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="15"/>
+                                <color key="textColor" red="0.20000000300000001" green="0.20000000300000001" blue="0.20000000300000001" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="highlightedColor" red="0.20000000300000001" green="0.20000000300000001" blue="0.20000000300000001" alpha="1" colorSpace="calibratedRGB"/>
+                            </label>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lGm-rx-owf">
-                                <rect key="frame" x="154" y="72" width="66" height="33"/>
+                                <rect key="frame" x="198" y="84" width="66" height="33"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.14192884059999999" green="0.55723893879999997" blue="0.62632935209999996" alpha="1" colorSpace="calibratedRGB"/>
                                 <state key="normal" title="Filter">
@@ -117,13 +124,6 @@
                                     <segue destination="BlV-SZ-UiO" kind="presentation" identifier="showFilterVC" id="eeD-fH-6ix"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Swipe to delete or edit your book" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qEf-BG-F5g">
-                                <rect key="frame" x="48" y="143" width="278" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="15"/>
-                                <color key="textColor" red="0.20000000300000001" green="0.20000000300000001" blue="0.20000000300000001" alpha="1" colorSpace="calibratedRGB"/>
-                                <color key="highlightedColor" red="0.20000000300000001" green="0.20000000300000001" blue="0.20000000300000001" alpha="1" colorSpace="calibratedRGB"/>
-                            </label>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
@@ -334,13 +334,13 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Joan Didion" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="X9w-qH-cLx">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Joan Didion" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="X9w-qH-cLx">
                                 <rect key="frame" x="29" y="214" width="319" height="40"/>
                                 <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="20"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Publisher: Penguin" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oMs-af-4l6">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Publisher: Penguin" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="oMs-af-4l6">
                                 <rect key="frame" x="29" y="261" width="319" height="40"/>
                                 <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="20"/>
                                 <nil key="textColor"/>
@@ -363,13 +363,13 @@
                                     <segue destination="FSB-mG-jzr" kind="presentation" identifier="showCheckoutVC" id="XI6-ZO-XZr"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Slouching Towards Bethlehem" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WMw-n3-DA8">
-                                <rect key="frame" x="29" y="100" width="281.5" height="103.5"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Slouching Towards Bethlehem" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="14" translatesAutoresizingMaskIntoConstraints="NO" id="WMw-n3-DA8">
+                                <rect key="frame" x="29" y="100" width="300" height="103.5"/>
                                 <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="27"/>
                                 <color key="textColor" red="0.20000000300000001" green="0.20000000300000001" blue="0.20000000300000001" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="May 5, 2016 5:55PM" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2JC-RG-2MM">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="May 5, 2016 5:55PM" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="2JC-RG-2MM">
                                 <rect key="frame" x="29" y="343" width="319" height="40"/>
                                 <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="20"/>
                                 <nil key="textColor"/>
@@ -390,7 +390,7 @@
                             <constraint firstItem="JHR-yR-O0z" firstAttribute="height" secondItem="oMs-af-4l6" secondAttribute="height" id="ULq-MF-xhQ"/>
                             <constraint firstItem="2JC-RG-2MM" firstAttribute="leading" secondItem="JHR-yR-O0z" secondAttribute="leading" id="WLE-oQ-jR1"/>
                             <constraint firstItem="X9w-qH-cLx" firstAttribute="height" secondItem="R8u-JZ-owL" secondAttribute="height" multiplier="0.06" id="ZOD-WZ-THV"/>
-                            <constraint firstItem="WMw-n3-DA8" firstAttribute="width" secondItem="R8u-JZ-owL" secondAttribute="width" multiplier="0.75" id="aXf-LS-zdF"/>
+                            <constraint firstItem="WMw-n3-DA8" firstAttribute="width" secondItem="R8u-JZ-owL" secondAttribute="width" multiplier="0.8" id="aXf-LS-zdF"/>
                             <constraint firstItem="JHR-yR-O0z" firstAttribute="width" secondItem="oMs-af-4l6" secondAttribute="width" id="bjj-zo-SIM"/>
                             <constraint firstItem="X9w-qH-cLx" firstAttribute="top" secondItem="WMw-n3-DA8" secondAttribute="bottom" constant="10.5" id="hzf-iY-RbX"/>
                             <constraint firstItem="WMw-n3-DA8" firstAttribute="leading" secondItem="R8u-JZ-owL" secondAttribute="leadingMargin" constant="13" id="iRo-O3-u6t"/>
@@ -571,8 +571,8 @@
                                     </button>
                                 </subviews>
                             </stackView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Add Book" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rnn-eS-iGW">
-                                <rect key="frame" x="29" y="91" width="144" height="47"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Add Book" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rnn-eS-iGW">
+                                <rect key="frame" x="29" y="91" width="300" height="47"/>
                                 <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="28"/>
                                 <color key="textColor" red="0.20000000300000001" green="0.20000000300000001" blue="0.20000000300000001" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
@@ -600,7 +600,7 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="rnn-eS-iGW" firstAttribute="width" secondItem="dAk-nZ-8DW" secondAttribute="width" multiplier="0.37" id="2zT-0i-Zi0"/>
+                            <constraint firstItem="rnn-eS-iGW" firstAttribute="width" secondItem="dAk-nZ-8DW" secondAttribute="width" multiplier="0.8" id="2zT-0i-Zi0"/>
                             <constraint firstItem="rnn-eS-iGW" firstAttribute="leading" secondItem="dAk-nZ-8DW" secondAttribute="leadingMargin" constant="13" id="CGg-5W-hBC"/>
                             <constraint firstItem="0xq-SJ-LYG" firstAttribute="height" secondItem="dAk-nZ-8DW" secondAttribute="height" multiplier="0.6" id="Ifd-1u-o3s"/>
                             <constraint firstItem="rnn-eS-iGW" firstAttribute="top" secondItem="iF0-9w-KdE" secondAttribute="bottom" constant="71" id="Pfs-G2-Kfi"/>
@@ -680,7 +680,7 @@
                                 <textInputTraits key="textInputTraits" autocapitalizationType="words"/>
                             </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Edit Book" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qZz-5f-Bxz">
-                                <rect key="frame" x="16" y="94" width="135" height="47"/>
+                                <rect key="frame" x="16" y="94" width="337.5" height="47"/>
                                 <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="28"/>
                                 <color key="textColor" red="0.20000000300000001" green="0.20000000300000001" blue="0.20000000300000001" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
@@ -706,7 +706,7 @@
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Book" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hmi-hH-Na7">
-                                <rect key="frame" x="16" y="160" width="54" height="28"/>
+                                <rect key="frame" x="16" y="160" width="135" height="28"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -732,7 +732,7 @@
                             <constraint firstItem="NtY-2i-901" firstAttribute="top" secondItem="Omq-27-6jc" secondAttribute="bottom" constant="8" id="I0p-UA-TPl"/>
                             <constraint firstItem="eVX-LD-Vv2" firstAttribute="width" secondItem="doo-h5-X08" secondAttribute="width" multiplier="0.18" id="OK0-kc-YUX"/>
                             <constraint firstItem="qZz-5f-Bxz" firstAttribute="top" secondItem="NtY-2i-901" secondAttribute="bottom" constant="32.5" id="Oue-xf-UgH"/>
-                            <constraint firstItem="qZz-5f-Bxz" firstAttribute="width" secondItem="doo-h5-X08" secondAttribute="width" multiplier="0.36" id="RWY-hT-PF1"/>
+                            <constraint firstItem="qZz-5f-Bxz" firstAttribute="width" secondItem="doo-h5-X08" secondAttribute="width" multiplier="0.9" id="RWY-hT-PF1"/>
                             <constraint firstItem="qZz-5f-Bxz" firstAttribute="leading" secondItem="NtY-2i-901" secondAttribute="leading" id="Tho-Cy-ez9"/>
                             <constraint firstItem="eVX-LD-Vv2" firstAttribute="leading" secondItem="Hmi-hH-Na7" secondAttribute="leading" id="TtL-HA-GRh"/>
                             <constraint firstItem="lE9-An-XmT" firstAttribute="width" secondItem="x0E-Uc-3uy" secondAttribute="width" id="Ufg-rY-X4Q"/>
