--- a/SWAGLibrary/Base.lproj/Main.storyboard
+++ b/SWAGLibrary/Base.lproj/Main.storyboard
@@ -334,24 +334,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Joan Didion" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="X9w-qH-cLx">
-                                <rect key="frame" x="29" y="214" width="319" height="40"/>
-                                <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="20"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Publisher: Penguin" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="oMs-af-4l6">
-                                <rect key="frame" x="29" y="261" width="319" height="40"/>
-                                <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="20"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Last Checked Out:" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JHR-yR-O0z">
-                                <rect key="frame" x="29" y="308" width="319" height="40"/>
-                                <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="20"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mrC-ed-yad">
                                 <rect key="frame" x="27.5" y="444" width="319" height="60"/>
                                 <color key="backgroundColor" red="0.14192884059999999" green="0.55723893879999997" blue="0.62632935209999996" alpha="1" colorSpace="calibratedRGB"/>
@@ -364,44 +346,65 @@
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Slouching Towards Bethlehem" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="14" translatesAutoresizingMaskIntoConstraints="NO" id="WMw-n3-DA8">
-                                <rect key="frame" x="29" y="100" width="300" height="103.5"/>
+                                <rect key="frame" x="29" y="100" width="300" height="93.5"/>
                                 <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="27"/>
                                 <color key="textColor" red="0.20000000300000001" green="0.20000000300000001" blue="0.20000000300000001" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="May 5, 2016 5:55PM" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="2JC-RG-2MM">
-                                <rect key="frame" x="29" y="343" width="319" height="40"/>
-                                <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="20"/>
-                                <nil key="textColor"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="hSV-qd-8Rl">
+                                <rect key="frame" x="29" y="234" width="300" height="133.5"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Publisher: Penguin" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="oMs-af-4l6">
+                                        <rect key="frame" x="0.0" y="0.0" width="300" height="26"/>
+                                        <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="19"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tags: Memoir, Nonfiction" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="Iq5-UZ-Xf2">
+                                        <rect key="frame" x="0.0" y="36" width="300" height="26"/>
+                                        <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="19"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Last Checked Out:" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JHR-yR-O0z">
+                                        <rect key="frame" x="0.0" y="71.5" width="300" height="26"/>
+                                        <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="19"/>
+                                        <color key="textColor" red="0.20000000300000001" green="0.20000000300000001" blue="0.20000000300000001" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="May 5, 2016 5:55PM" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="2JC-RG-2MM">
+                                        <rect key="frame" x="0.0" y="107.5" width="300" height="26"/>
+                                        <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="19"/>
+                                        <color key="textColor" red="0.20000000300000001" green="0.20000000300000001" blue="0.20000000300000001" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Joan Didion" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="X9w-qH-cLx">
+                                <rect key="frame" x="29" y="190" width="319" height="29"/>
+                                <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="21"/>
+                                <color key="textColor" red="0.20000000300000001" green="0.20000000300000001" blue="0.20000000300000001" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="X9w-qH-cLx" firstAttribute="leading" secondItem="WMw-n3-DA8" secondAttribute="leading" id="4bD-vI-LH9"/>
-                            <constraint firstItem="WMw-n3-DA8" firstAttribute="height" secondItem="R8u-JZ-owL" secondAttribute="height" multiplier="0.155" id="5zZ-Nl-8ib"/>
-                            <constraint firstItem="oMs-af-4l6" firstAttribute="width" secondItem="X9w-qH-cLx" secondAttribute="width" id="8do-c0-PiU"/>
-                            <constraint firstItem="2JC-RG-2MM" firstAttribute="top" secondItem="JHR-yR-O0z" secondAttribute="bottom" constant="-5" id="9ag-uN-LAJ"/>
-                            <constraint firstItem="2JC-RG-2MM" firstAttribute="width" secondItem="JHR-yR-O0z" secondAttribute="width" id="9gQ-pO-8zt"/>
+                            <constraint firstItem="hSV-qd-8Rl" firstAttribute="leading" secondItem="X9w-qH-cLx" secondAttribute="leading" id="3pt-MK-akk"/>
+                            <constraint firstItem="X9w-qH-cLx" firstAttribute="top" secondItem="WMw-n3-DA8" secondAttribute="bottom" constant="-3.5" id="7TK-it-BNZ"/>
+                            <constraint firstItem="X9w-qH-cLx" firstAttribute="height" secondItem="WMw-n3-DA8" secondAttribute="height" multiplier="0.32" id="9m0-Jd-fTE"/>
+                            <constraint firstItem="WMw-n3-DA8" firstAttribute="height" secondItem="R8u-JZ-owL" secondAttribute="height" multiplier="0.14" id="Bys-RB-y72"/>
                             <constraint firstItem="mrC-ed-yad" firstAttribute="height" secondItem="R8u-JZ-owL" secondAttribute="height" multiplier="0.09" id="Do8-TR-LVK"/>
                             <constraint firstItem="mrC-ed-yad" firstAttribute="width" secondItem="R8u-JZ-owL" secondAttribute="width" multiplier="0.85" id="Gbm-Tb-oHd"/>
                             <constraint firstItem="mrC-ed-yad" firstAttribute="centerX" secondItem="R8u-JZ-owL" secondAttribute="centerX" id="HD3-JA-Hx4"/>
-                            <constraint firstItem="WMw-n3-DA8" firstAttribute="top" secondItem="kHh-ze-DPp" secondAttribute="bottom" constant="36" id="OjD-J9-hil"/>
-                            <constraint firstItem="JHR-yR-O0z" firstAttribute="height" secondItem="oMs-af-4l6" secondAttribute="height" id="ULq-MF-xhQ"/>
-                            <constraint firstItem="2JC-RG-2MM" firstAttribute="leading" secondItem="JHR-yR-O0z" secondAttribute="leading" id="WLE-oQ-jR1"/>
-                            <constraint firstItem="X9w-qH-cLx" firstAttribute="height" secondItem="R8u-JZ-owL" secondAttribute="height" multiplier="0.06" id="ZOD-WZ-THV"/>
-                            <constraint firstItem="WMw-n3-DA8" firstAttribute="width" secondItem="R8u-JZ-owL" secondAttribute="width" multiplier="0.8" id="aXf-LS-zdF"/>
-                            <constraint firstItem="JHR-yR-O0z" firstAttribute="width" secondItem="oMs-af-4l6" secondAttribute="width" id="bjj-zo-SIM"/>
-                            <constraint firstItem="X9w-qH-cLx" firstAttribute="top" secondItem="WMw-n3-DA8" secondAttribute="bottom" constant="10.5" id="hzf-iY-RbX"/>
-                            <constraint firstItem="WMw-n3-DA8" firstAttribute="leading" secondItem="R8u-JZ-owL" secondAttribute="leadingMargin" constant="13" id="iRo-O3-u6t"/>
-                            <constraint firstItem="JHR-yR-O0z" firstAttribute="leading" secondItem="oMs-af-4l6" secondAttribute="leading" id="iUu-og-UVC"/>
-                            <constraint firstItem="oMs-af-4l6" firstAttribute="top" secondItem="X9w-qH-cLx" secondAttribute="bottom" constant="7" id="nZu-d3-fZ1"/>
-                            <constraint firstItem="oMs-af-4l6" firstAttribute="height" secondItem="X9w-qH-cLx" secondAttribute="height" id="o1V-lw-4FK"/>
-                            <constraint firstItem="oMs-af-4l6" firstAttribute="leading" secondItem="X9w-qH-cLx" secondAttribute="leading" id="ogc-gL-oPx"/>
-                            <constraint firstItem="JHR-yR-O0z" firstAttribute="top" secondItem="oMs-af-4l6" secondAttribute="bottom" constant="7" id="qIp-hb-x1G"/>
-                            <constraint firstItem="2JC-RG-2MM" firstAttribute="height" secondItem="JHR-yR-O0z" secondAttribute="height" id="t61-vt-pRM"/>
-                            <constraint firstItem="X9w-qH-cLx" firstAttribute="width" secondItem="R8u-JZ-owL" secondAttribute="width" multiplier="0.85" id="wkF-UG-fjq"/>
-                            <constraint firstItem="mrC-ed-yad" firstAttribute="top" secondItem="2JC-RG-2MM" secondAttribute="bottom" constant="61" id="xAs-MR-olk"/>
+                            <constraint firstItem="hSV-qd-8Rl" firstAttribute="height" secondItem="R8u-JZ-owL" secondAttribute="height" multiplier="0.2" id="IAe-6f-7eQ"/>
+                            <constraint firstItem="hSV-qd-8Rl" firstAttribute="width" secondItem="R8u-JZ-owL" secondAttribute="width" multiplier="0.8" id="IKh-we-UfO"/>
+                            <constraint firstItem="WMw-n3-DA8" firstAttribute="leading" secondItem="R8u-JZ-owL" secondAttribute="leadingMargin" constant="13" id="N9c-kn-Fgy"/>
+                            <constraint firstItem="mrC-ed-yad" firstAttribute="top" secondItem="hSV-qd-8Rl" secondAttribute="bottom" constant="76.5" id="VWU-vo-gfo"/>
+                            <constraint firstItem="WMw-n3-DA8" firstAttribute="top" secondItem="kHh-ze-DPp" secondAttribute="bottom" constant="36" id="cSm-k4-cPz"/>
+                            <constraint firstItem="hSV-qd-8Rl" firstAttribute="top" secondItem="X9w-qH-cLx" secondAttribute="bottom" constant="15" id="ibm-cw-1bQ"/>
+                            <constraint firstItem="X9w-qH-cLx" firstAttribute="leading" secondItem="WMw-n3-DA8" secondAttribute="leading" id="ic6-c8-qEm"/>
+                            <constraint firstItem="X9w-qH-cLx" firstAttribute="width" secondItem="R8u-JZ-owL" secondAttribute="width" multiplier="0.85" id="jFR-k0-yoH"/>
+                            <constraint firstItem="WMw-n3-DA8" firstAttribute="width" secondItem="R8u-JZ-owL" secondAttribute="width" multiplier="0.8" id="nIV-pF-j2f"/>
                         </constraints>
                     </view>
                     <toolbarItems/>
